/*
 * $Id: ChangeLog,v 1.3482 2004/09/30 23:24:07 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-09-30 08:20 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * contrib/rdd_ads/ads1.c
    * fixed dbInfo (DBI_GETLOCKARRAY)
    * added eof test before APPEND to clear an unusual problem
      with child tables seeming to be at eof immediately after append.

2004-09-30 16:23 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    * Copied recent fix from STATE_EXPRES_ID to STATE_ID

  /*
     We have very ugly and inefficent redundancy in getExpReal().
     I'd really like to rewrite this function, but it should probably wait till after Beta-1.2.
   */

2004-09-30 17:30 UTC+0200 Giancarlo Niccolai <gc at niccolai dot ws>
  * source/tip/utils.c
    * More relaxed checks for leading whitespaces and html document
      while defining document mime types.

2004-09-30 11:10 UTC-3 Marcelo Lombardo <marcelo@xharbour.com.br>
  * hrbdll.bc
  * hrvdll.vc
  * hrbdll.wc
  * makefine.bc
  * makefile.nt
  * makefile.vc
  * makefile.wc
  * source/rtl/Makefile
    ! Removed mlpos.c, memoline.c and mlcount.c
  * source/rtl/txtline.c
    + Added MLPOS() function
    ! Fixed TAB handling
    ! Fixed empty line return string in memoline()
    ! Fixed mlcount() with empty lines
  * source/rtl/memoline.c
  * source/rtl/mlcount.c
  * source/rtl/mlpos.c
    - Files removed from CVS

    / * Now memo functions behaves 100% like Clipper
        All above bugs reported by Brian Hays's
        test routine - Thanks, Brian!
    */

2004-09-29 21:04 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rdd/dbcmd.c
    ! Fixed SELECT() result from non-character parameters, to 0 instead
      the current work area, for Clipper compatibility.

2004-09-29 22:15 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>