@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3482 2004/09/30 23:24:07 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.3483 2004/10/01 01:20:57 brianhays Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-10-01 03:55 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/include/hbapicdp.h
+  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
+    * added #define hb_cdp_page s_cdpage
+
+  * xharbour/source/rdd/dbcmd.c
+    * fixed problem with append from. The file is open now in
+      SHARED/READONLY mode
 
 2004-09-30 08:20 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * contrib/rdd_ads/ads1.c
